--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="google-site-verification" content="kGrFEgOMg7MCdXsK_uv8AA15MqAO2xJmkcWON9luCNU" />
-  <title>Competitive Influence Mazimization</title>
+  <title>Cybergrooming Porject</title>
   <!--font google-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
